    - Eyedropper tech now gives a tiny bit of additional reach as a small bonus. So people with zoom-altering mods don't get absolutely nothing.
    - Rubia mod name in library now just says ○🌐Rubia
    - Forcing people to up versions of their dependencies for various upgrades, as I need some upgrades, and I'm not going to handle bug reports/testing on older versions of dependencies.
---------------------------------------------------------------------------------------------------
Version: 0.69.126
Date: 2025-11-14
  Changes:
    - Added the long-awaited eyedrop upgrade. I blacklisted 7 of the really popular zoom mods that this change will break, but let me know if you experience your zoom mods not working as intended. A new Rubia mod setting can be toggled off to disable this behavior, which other mods can also disable if needed.
    - Science packs now have proper descriptions.
---------------------------------------------------------------------------------------------------
Version: 0.69.125
Date: 2025-11-10
  Changes:
    - Rubia now filters vehicle hitbox adjustment a little more stringently.
    - Banned some belt balancer mods from Rubia, because they allow leftward item teleportation.
---------------------------------------------------------------------------------------------------
Version: 0.69.124
Date: 2025-11-09
  Changes:
    - Compatibility with a space age overhaul called "Space Age Overhaul." Added compat recipe for steel.
---------------------------------------------------------------------------------------------------
Version: 0.69.123
Date: 2025-11-09
  Changes:
    - Slightly reduced hitboxes of car-like vehicles on Rubia. I tested this with a variety of vehicles for stability, but please report if anything breaks, and I'll have a quick hotfix up.
---------------------------------------------------------------------------------------------------
Version: 0.69.122
Date: 2025-11-05
  Changes: