@@ -339,7 +339,8 @@ rubia-craptonite-mask=This gaudy mask makes you believe that you can see through
 rubia-craptonite-tiber-implant=This implant painfully jabs its needles into your skin, ensuring that your blood always maintains intimate contact with Tiberium. This lets you see the Tiberium in everything.
 rubia-craptonite-grillz=Show the universe that your tackiness knows no bounds with these Zinc-plated grillz, reinforced with craptonite. Your teeth feel shockingly conductive with this "upgrade."
 rubia-craptonite-stopwatch=You crafted this stopwatch with many tiny pieces made of exotic actinides, stuffed in a craptonite casing. Despite your questionable fashion sense, the glowing dial lets you be punctual for any decay event. Keeping this highly radioactive piece close at all times ensures it will outlast you.
-rubia-craptonite-rainbow-brooch=This fancy craptonite adornment holds a potent prismatic gemstone that makes the wearer able to see colors beyond what 
+rubia-craptonite-rainbow-brooch=This fancy craptonite adornment holds a potent prismatic gemstone that makes the wearer radiant.
+;WIP
 rubia-craptonite-carrot=This plug's Rabbascan machinery absorbs faint energy signatures. The craptonite internals withstand sustained violent vibrations as it transmits the energy to the user.
 
 rubia-progression-stage1-compat-k2so=Krastor's spirit courses through your veins. Ancient bacterial knowledge used to make useless doodads penetrates your thick skull.
